refactor: Improved code according to Sonarqube cloud recommendations